<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:orientation="horizontal" >


    <TextView
        android:id="@+id/workoutName"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/lift_name_text"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/workoutWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/lift_weight_text"
        android:textSize="18sp"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/workoutSets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/lift_sets_text"
        android:textSize="18sp"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/workoutReps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/lift_reps_text"
        android:textSize="18sp"
        android:layout_gravity="center" />
</LinearLayout>
