<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:orientation="horizontal" >


    <TextView
        android:id="@+id/liftName"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/lift_name_text"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/liftMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/lift_max_text"
        android:textSize="18sp"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/liftDate"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/lift_date_text"
        android:textSize="14sp"
        android:layout_gravity="center" />

</LinearLayout>
